samples-v0/istio-app-v2/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
    tls:
      httpsRedirect: false # sends 301 redirect for http requests turned off for now
      #httpsRedirect: true
  - port:
      number: 443
      name: https
      #protocol: HTTPS
      protocol: HTTP
    hosts:
      - "*"
    #tls:
    #  mode: SIMPLE
    #  credentialName: httpbin-tls-secret
