samples-v0/istio-app-v2/httpbin-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbinvs
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/common-gateway
  http:
  - match:
    - uri:
        prefix: /headers
    route:
    - destination:
        port:
          number: 8000
        host: httpbins
